<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".ResetPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff">

        <!--  Header -->
        <include layout="@layout/header_logo_bar"></include>

        <!-- Footer -->
        <include layout="@layout/footer_logo_bar"></include>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dip"
            android:layout_below="@id/header"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/title_textView_resetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotPassword"
                android:textColor="@color/colorRegularTextDark"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/message_textView_resetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotPassword_label"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/colorRegularTextLight"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"/>

            <!--  Email Label -->
            <EditText
                android:id="@+id/email_editText_resetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:hint="@string/email"
                android:textSize="20sp"
                android:textColorHint="@color/colorRegularTextLight"
                android:textColor="@color/colorRegularTextDark"/>

            <!-- Reset Password Button -->
            <Button android:id="@+id/btn_resetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resetPassword"
                android:layout_marginTop="20dip"
                android:layout_marginBottom="60dip"
                android:textColor="@color/colorRegularTextDark"/>
        </LinearLayout>

    </RelativeLayout>


</ScrollView>