<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <!--  Header -->
        <include layout="@layout/header_logo_bar"></include>

        <!-- Footer -->
        <include layout="@layout/footer_logo_bar"></include>

        <!-- Login Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/header"
            android:layout_marginTop="40dp">

            <!--  Email Label -->
            <EditText
                android:id="@+id/email_editText_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:hint="@string/email"
                android:textSize="20sp"
                android:textColorHint="@color/colorRegularTextLight"
                android:textColor="@color/colorRegularTextDark"/>

            <!--  Password Label -->
            <EditText
                android:id="@+id/password_editText_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textSize="20sp"
                android:textColorHint="@color/colorRegularTextLight"
                android:textColor="@color/colorRegularTextDark"/>

            <!-- Login button -->
            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:background="@android:color/background_light"
                android:text="@string/login"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:textColor="@android:color/black" />

            <!-- Link to Reset Password -->
            <TextView
                android:id="@+id/link_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="10dip"
                android:layout_gravity="center"
                android:text="@string/forgot_password_link"
                android:gravity="center"
                android:textSize="20dip"
                android:textColor="@color/colorRegularTextDark"/>

            <!-- Link to Registration Screen -->
            <TextView
                android:id="@+id/link_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="60dip"
                android:layout_gravity="center"
                android:text="@string/register_link"
                android:gravity="center"
                android:textSize="20dip"
                android:textColor="@color/colorRegularTextDark"/>

        </LinearLayout>
        <!-- Login Form Ends -->

    </RelativeLayout>

</ScrollView>