<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <!--  Header -->
        <include layout="@layout/header_logo_bar"></include>

        <!-- Footer -->
        <include layout="@layout/footer_logo_bar"></include>

        <!-- Registration Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/header">

            <!--  First name Label -->
            <EditText
                android:id="@+id/firstName_editText_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:hint="@string/firstName"
                android:textSize="20sp"
                android:textColorHint="@color/colorRegularTextLight"
                android:textColor="@color/colorRegularTextDark"/>

            <!--  Last name Label -->
            <EditText
                android:id="@+id/lastName_editText_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:hint="@string/lastName"
                android:textSize="20sp"
                android:textColorHint="@color/colorRegularTextLight"
                android:textColor="@color/colorRegularTextDark"/>

            <!--  Email Label -->
            <EditText
                android:id="@+id/email_editText_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:hint="@string/email"
                android:textSize="20sp"
                android:textColorHint="@color/colorRegularTextLight"
                android:textColor="@color/colorRegularTextDark"/>

            <!--  Password Label -->
            <EditText
                android:id="@+id/password_editText_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textSize="20sp"
                android:textColorHint="@color/colorRegularTextLight"
                android:textColor="@color/colorRegularTextDark"/>


            <!-- Register Button -->
            <Button android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/register"/>

            <!-- Link to Login Screen -->
            <TextView android:id="@+id/link_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="60dip"
                android:text="Already has account! Login here"
                android:gravity="center"
                android:textSize="20dip"
                android:textColor="@color/colorRegularTextDark"/>

        </LinearLayout>
        <!-- Registration Form Ends -->
    </RelativeLayout>
</ScrollView>